[tool.poetry]
name = "groverfeat"
version = "0.1.0"
description = "Grover embeddings for chemical molecules"
authors = ["Ersilia Developers"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
darglint = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
